[package]
name = "bleak-rs"
version = "0.1.2"
edition = "2021"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>", "Jesse Smith <jesses2025smith@gmail.com>"]

description = "High-level BLE communication library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jesses2025smith/bleak-rs"
homepage = "https://github.com/jesses2025smith/bleak-rs"
keywords = ["bluetooth", "ble"]
categories = ["asynchronous", "hardware-support"]

[lib]
name = "bleasy"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.44", features = ["rt"] }
tokio-stream = "0.1"
log = "0.4"
futures = "0.3"
uuid = "1.16"
stream-cancel = "0.8"
btleplug = { version = "0.11", features = ["serde"] }

[dev-dependencies]
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
anyhow = "1"
