[package]
name = "bleak-rs"
version = "0.1.10"
edition = "2021"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>", "Jesse Smith <jesses2025smith@gmail.com>"]

description = "High-level BLE communication library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jesses2025smith/bleak-rs"
homepage = "https://github.com/jesses2025smith/bleak-rs"
keywords = ["bluetooth", "ble"]
categories = ["asynchronous", "hardware-support"]

[lib]
name = "bleasy"
path = "src/lib.rs"

[dependencies]
btleplug = { version = "0.11", features = ["serde"] }
log = "0.4"
rsutil = "0.1"
stream-cancel = "0.8"
tokio = { version = "1.47", features = ["rt-multi-thread", "sync"] }
tokio-stream = "0.1"
uuid = "1.17"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.47", features = ["macros", "rt", "rt-multi-thread"] }
rsutil = { version = "0.1", features = ["log4rs"] }
